# gnucash-butchered

./: .gitignore  Makefile.am  configure.ac
src/: CMakeLists.txt  Makefile.am  config.h.cmake.in  platform.h
src/app-utils/: CMakeLists.txt  Makefile.am  QuickFill.cpp  business-options.c  business-options.cpp  business-options.h  file-utils.c  file-utils.cpp  gfec.c  gfec.h  gnc-account-merge.cpp  gnc-accounting-period.cpp  gnc-accounting-period.h  gnc-addr-quickfill.cpp  gnc-component-manager.cpp  gnc-component-manager.h  gnc-entry-quickfill.cpp  gnc-euro.cpp  gnc-exp-parser.c  gnc-exp-parser.cpp  gnc-gettext-util.cpp  gnc-help-utils.c  gnc-help-utils.cpp  gnc-helpers.c  gnc-helpers.cpp  gnc-helpers.h  gnc-sx-instance-model.cpp  gnc-sx-instance-model.h  gnc-ui-balances.cpp  gnc-ui-balances.h  gnc-ui-util.c  gnc-ui-util.cpp  gnc-ui-util.h  gncmod-app-utils.c  gncmod-app-utils.cpp  option-util.c  option-util.cpp  option-util.h
src/app-utils/calculation/: Makefile.calc  amort_opt.cpp  amort_prt.cpp  expression_parser.cpp  fin-interactive.cpp  fin-main.cpp  fin-proto.sh  fin.c  fin.cpp  fin_spl_protos.h  finproto.h  numeric_ops.cpp
src/app-utils/test/: Makefile.am  test-exp-parser.cpp  test-link-module.c
src/backend/: Makefile.am
src/backend/sql/: Makefile.am  escape.cpp  gnc-account-sql.cpp  gnc-address-sql.cpp  gnc-backend-sql.cpp  gnc-backend-sql.h  gnc-bill-term-sql.cpp  gnc-book-sql.cpp  gnc-budget-sql.cpp  gnc-commodity-sql.cpp  gnc-customer-sql.cpp  gnc-employee-sql.cpp  gnc-entry-sql.cpp  gnc-invoice-sql.cpp  gnc-job-sql.cpp  gnc-lots-sql.cpp  gnc-order-sql.cpp  gnc-owner-sql.cpp  gnc-price-sql.cpp  gnc-recurrence-sql.cpp  gnc-schedxaction-sql.cpp  gnc-slots-sql.cpp  gnc-tax-table-sql.cpp  gnc-transaction-sql.cpp  gnc-vendor-sql.cpp
src/backend/xml/: Makefile.am  gnc-account-xml-v2.cpp  gnc-address-xml-v2.cpp  gnc-address-xml-v2.h  gnc-backend-xml.c  gnc-backend-xml.cpp  gnc-backend-xml.h  gnc-bill-term-xml-v2.cpp  gnc-book-xml-v2.cpp  gnc-budget-xml-v2.cpp  gnc-commodity-xml-v2.cpp  gnc-customer-xml-v2.cpp  gnc-employee-xml-v2.cpp  gnc-entry-xml-v2.cpp  gnc-freqspec-xml-v2.cpp  (+38 more)
src/core-utils/: Makefile.am  binreloc.c  gnc-features.cpp  gnc-filepath-utils.c  gnc-filepath-utils.cpp  gnc-gconf-utils.cpp  gnc-gdate-utils.cpp  gnc-gkeyfile-utils.cpp  gnc-glib-utils.c  gnc-glib-utils.cpp  gnc-glib-utils.h  gnc-locale-utils.c  gnc-locale-utils.cpp  gnc-main.cpp  gnc-path.c  gnc-path.cpp  gnc-uri-utils.cpp
src/engine/: Account.cpp  Account.h  AccountP.h  Makefile.am  Query.c  Query.cpp  Query.h  README.query-api  Recurrence.cpp  Recurrence.h  SX-book-p.h  SX-book.cpp  SX-book.h  SX-ttinfo.cpp  SX-ttinfo.h  SchedXaction.cpp  SchedXaction.h  Scrub.cpp  Scrub2.cpp  Scrub2.h  Scrub3.cpp  Scrub3.h  ScrubP.h  Split.c  Split.cpp  Split.h  SplitP.h  TransLog.cpp  TransLog.h  Transaction.c  Transaction.cpp  Transaction.h  TransactionP.h  cap-gains.cpp  cap-gains.h  cashobjects.cpp  cashobjects.h  design.txt  engine-helpers.c  engine-helpers.cpp  (+63 more)
src/experimental/: Makefile.am
src/gnc/: CMakeLists.txt
src/gnc-module/: .gnc-module.cpp.swp  CMakeLists.txt  Makefile.am  gnc-module.c  gnc-module.cpp
src/gnome/: Makefile.am  assistant-acct-period.cpp  assistant-hierarchy.c  assistant-hierarchy.cpp  assistant-loan.cpp  assistant-stock-split.cpp  dialog-commodities.cpp  dialog-fincalc.cpp  dialog-find-transactions.cpp  dialog-lot-viewer.cpp  dialog-new-user.c  dialog-new-user.cpp  dialog-price-edit-db.c  dialog-price-edit-db.cpp  dialog-price-editor.c  dialog-price-editor.cpp  dialog-progress.c  dialog-progress.cpp  dialog-progress.h  dialog-sx-editor.c  dialog-sx-editor.cpp  dialog-sx-from-trans.cpp  dialog-sx-since-last-run.cpp  dialog-tax-info.c  dialog-tax-info.cpp  gnc-budget-view.cpp  gnc-plugin-account-tree.cpp  gnc-plugin-basic-commands.cpp  gnc-plugin-budget.cpp  gnc-plugin-page-account-tree.cpp  gnc-plugin-page-budget.cpp  gnc-plugin-page-register.c  gnc-plugin-page-register.cpp  gnc-plugin-page-register2.c  gnc-plugin-page-register2.cpp  gnc-plugin-page-sx-list.cpp  gnc-plugin-register.cpp  gnc-plugin-register2.cpp  gnc-split-reg.cpp  gnc-split-reg2.cpp  (+8 more)
src/gnome-search/: Makefile.am  dialog-search.c  dialog-search.cpp  dialog-search.h  gnc-general-search.cpp  gncmod-gnome-search.cpp  search-account.cpp  search-account.h  search-boolean.cpp  search-boolean.h  search-core-type.cpp  search-core-type.h  search-core-utils.cpp  search-date.cpp  search-date.h  search-double.cpp  search-double.h  search-int64.cpp  search-int64.h  search-numeric.cpp  search-numeric.h  search-reconciled.cpp  search-reconciled.h  search-string.cpp  search-string.h
src/gnome-utils/: Makefile.am  account-quickfill.cpp  assistant-gconf-setup.c  assistant-gconf-setup.cpp  assistant-utils.cpp  assistant-xml-encoding.cpp  cursors.cpp  dialog-account.c  dialog-account.cpp  dialog-book-close.c  dialog-book-close.cpp  dialog-commodity.c  dialog-commodity.cpp  dialog-commodity.h  dialog-dup-trans.cpp  dialog-file-access.c  dialog-file-access.cpp  dialog-object-references.cpp  dialog-options.c  dialog-options.cpp  dialog-options.h  dialog-preferences.c  dialog-preferences.cpp  dialog-query-view.cpp  dialog-query-view.h  dialog-reset-warnings.cpp  dialog-tax-table.cpp  dialog-totd.cpp  dialog-transfer.c  dialog-transfer.cpp  dialog-userpass.cpp  dialog-utils.c  dialog-utils.cpp  gnc-account-sel.cpp  gnc-amount-edit.c  gnc-amount-edit.cpp  gnc-autosave.cpp  gnc-cell-renderer-date.cpp  gnc-cell-renderer-date.h  gnc-cell-renderer-popup-entry.c  (+85 more)
src/html/: Makefile.am  gnc-html-factory.cpp  gnc-html-history.cpp  gnc-html-webkit.c  gnc-html-webkit.cpp  gnc-html.c  gnc-html.cpp  gnc-html.h  gncmod-html.c  gncmod-html.cpp
src/import-export/: CMakeLists.txt  Makefile.am  gncmod-generic-import.cpp  import-account-matcher.cpp  import-backend.cpp  import-backend.h  import-format-dialog.cpp  import-main-matcher.cpp  import-match-map.cpp  import-parse.cpp  import-utilities.cpp
src/pixmaps/: Makefile.am
src/scm/: Makefile.am
src/test-core/: Makefile.am  test-stuff.h  unittest-support.cpp  unittest-support.h
(+291 files in other folders)
