SUBDIRS = . test

lib_LTLIBRARIES = libgnc-core-utils.la

libgnc_core_utils_la_SOURCES = \
  binreloc.c \
  gnc-features.c \
  gnc-filepath-utils.c \
  gnc-gconf-utils.c \
  gnc-gdate-utils.c \
  gnc-gkeyfile-utils.c \
  gnc-glib-utils.c \
  gnc-jalali.c \
  gnc-locale-utils.c \
  gnc-main.c \
  gnc-path.c \
  gnc-uri-utils.c

libgnc_core_utils_la_LIBADD = \
  ${GLIB_LIBS} \
  ${BINRELOC_LIBS} \
  ${GCONF_LIBS} \
  ${QOF_LIBS}


noinst_HEADERS = \
  binreloc.h \
  gnc-main.h \
  gnc-features.h \
  gnc-filepath-utils.h \
  gnc-gconf-utils.h \
  gnc-gdate-utils.h \
  gnc-gkeyfile-utils.h \
  gnc-glib-utils.h \
  gnc-jalali.h \
  gnc-locale-utils.h \
  gnc-path.h \
  gnc-uri-utils.h

AM_CPPFLAGS = \
  ${GLIB_CFLAGS} \
  ${GCONF_CFLAGS} \
  ${QOF_CFLAGS} \
  -I${top_srcdir}/src/libqof/qof \
  -I${top_builddir}/src \
  -I${top_srcdir}/src

gncmoddir = 
gncmod_DATA = 

if GNUCASH_SEPARATE_BUILDDIR
#Only needed when srcdir and builddir are different
#for running
SCM_FILE_LINKS = ${gncmod_DATA}
endif

.scm-links: 
	$(RM) -rf gnucash
	mkdir -p  gnucash
if GNUCASH_SEPARATE_BUILDDIR
	for X in ${SCM_FILE_LINKS} ; do \
	  $(LN_S) -f ${srcdir}/$$X . ; \
	done
endif
	( cd gnucash; for A in $(gncmod_DATA) ; do $(LN_S) -f ../$$A . ; done )
	touch .scm-links

noinst_DATA = .scm-links
BUILT_SOURCES = gncla-dir.h gnc-version.h
EXTRA_DIST = $(gncmod_DATA) core-utils.i gncla-dir.h.in 
clean-local:
	rm -rf gnucash

CLEANFILES = $(BUILT_SOURCES) .scm-links
MAINTAINERCLEANFILES = 

AM_CPPFLAGS += -DG_LOG_DOMAIN=\"gnc.core-utils\"

gncla-dir.h: gncla-dir.h.in ${top_builddir}/config.status Makefile
	rm -f $@.tmp
	sed < $< > $@.tmp \
		-e 's#@-DATADIRNAME-@#${DATADIRNAME}#g' \
		-e 's#@-libdir-@#${libdir}#g' \
		-e 's#@-bindir-@#${bindir}#g' \
		-e 's#@-sysconfdir-@#${sysconfdir}#g' \
		-e 's#@-datadir-@#${datadir}#g' \
		-e 's#@-prefix-@#${prefix}#g'
	mv $@.tmp $@

## We borrow guile's convention and use @-...-@ as the substitution
## brackets here, instead of the usual @...@.  This prevents autoconf
## from substituting the values directly into the left-hand sides of
## the sed substitutions.
gnc-version.h: _gnc-version.h
	-if [ ! -f gnc-version.h ]; then cp _gnc-version.h gnc-version.h; fi
	-cmp -s _gnc-version.h gnc-version.h || cp _gnc-version.h gnc-version.h
	-rm -f _gnc-version.h

_gnc-version.h: Makefile
	@echo "/* Autogenerated. Do not change. */"   > _gnc-version.h
	@echo "#ifndef GNC_VERSION_H"                >> _gnc-version.h
	@echo "#define GNC_VERSION_H"                >> _gnc-version.h
	@echo ""                                     >> _gnc-version.h
	@echo "#define GNUCASH_BUILD_DATE \"`date +%Y-%m-%d`\"" >> _gnc-version.h
	@echo "#endif"                               >> _gnc-version.h

